fix scroll overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@ body {
     background: url(../media/weapon-bg.png) #000000;
     background-position: center;
     background-size: cover;
+    margin: 0;
 }
 
 h1 {
